<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".PerfilFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/tv_titulo_dialogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_titulo_dialogo"
        android:textColor="#F44336"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginTop="94dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingEnd="20dp">

            <ImageButton
                android:id="@+id/iv_dialogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:src="@drawable/camera" />

            <TextView
                android:id="@+id/tv_texto_nombre_producto_dialogo"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/tv_texto_nombre_producto_dialogo"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_nombre_producto_dialogo"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/tv_texto_detalle_producto_dialogo"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/tv_texto_detalle_producto_dialogo"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_detalle_producto_dialogo"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/tv_texto_valor_producto_dialogo"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/tv_texto_valor_producto_dialogo"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_valor_producto_dialogo"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="80dp"
                android:textColor="#000000"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="74dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_editar_producto_dialogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/btn_editar_perfil_home"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn_salir_producto_dialogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/btn_cancelar_perfil_home"
            android:textColor="#3F51B5"
            android:textSize="24sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>